feat: 支持canvas render

--- a/examples/index.html
+++ b/examples/index.html
@@ -5,58 +5,183 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Test</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.8.0/proj4.js"></script>
+  <script src="proj4leaflet.js"></script>
   <style>
-    body{
+    body {
       font-family: Arial, Helvetica, sans-serif;
     }
-    .container{
+
+    .container {
       margin: 0 auto;
       max-width: 1200px;
     }
-    .map{
+
+    .map {
       width: 100%;
       height: 600px;
     }
-    .header{
+
+    .header {
       padding-top: 50px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="header">
-      <h1>Leaflet.canvas-icons</h1>
-      <p>Leaflet plugin for displaying markers on canvas instead of DOM.</p>
-    </div>
-    <div class="map" id="map"></div>
+<div class="container">
+  <div class="header">
+    <h1>Leaflet.canvas-icons</h1>
+    <p>Leaflet plugin for displaying markers on canvas</p>
+    <p>support canvas custom render</p>
   </div>
-  <script src="https://unpkg.com/leaflet-canvas-marker@0.2.0"></script>
-  <script>
-    var map = L.map('map').setView([59.9578,30.2987], 10);
-    var tiles = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors',
-      preferCanvas: true
-    }).addTo(map);
+  <div class="map" id="map"></div>
+</div>
+<script src="../dist/leaflet.canvas-markers.js"></script>
+<script>
 
-    var ciLayer = L.canvasIconLayer({}).addTo(map);
+  let CRS = new L.Proj.CRS('EPSG:4490', '+proj=longlat +ellps=GRS80 +no_defs', {
+    resolutions: [
+      1.40625,
+      0.703125,
+      0.3515625,
+      0.17578125,
+      0.087890625,
+      0.0439453125,
+      0.02197265625,
+      0.010986328125,
+      0.0054931640625,
+      0.00274658203125,
+      0.001373291015625,
+      6.866455078125E-4,
+      3.4332275390625E-4,
+      1.71661376953125E-4,
+      8.58306884765625E-5,
+      4.291534423828125E-5,
+      2.1457672119140625E-5,
+      1.0728836059570312E-5,
+      5.364418029785156E-6,
+      2.682209064925356E-6,
+      1.3411045324626732E-6
+    ],
+    origin: [-179.99998, 90],
+    bounds: L.bounds([117.75370429660006, 26.99449191557761], [123.63262097540007, 32.2668788575695])
+  })
+  let map = L.map('map', {
+    attributionControl: false,
+    center: [30.922474897744003, 120.79756468254071],
+    zoom: 15,
+    crs: CRS,
+    maxZoom: 18,
+    minZoom: 10,
+    zoomControl: false
+  })
+  L.tileLayer('http://ditu.zjzwfw.gov.cn/services/wmts/imgmap/default/oss?token=e956400d-a79e-47ed-9d80-d3ee04b5d356&service=WMTS&request=GetTile&version=1.0.0&layer=imgmap&style=default&format=image/jpgpng&TileMatrixSet=default028mm&TileMatrix={z}&TileRow={y}&TileCol={x}').addTo(map)
+  L.tileLayer('http://ditu.zjzwfw.gov.cn/services/wmts/imgmap_lab/default/oss/getTile/{z}/{y}/{x}?token=d1d8f823-9925-4f87-a551-4f8d0e1639dc').addTo(map)
 
-    ciLayer.addOnClickListener(function (e,data) {console.log(data)});
-    ciLayer.addOnHoverListener(function (e,data) {console.log(data[0].data._leaflet_id)});
+
+  // map.on('click', (e) => {
+  //   console.log([e.latlng.lat, e.latlng.lng])
+  // })
+
+
+  var ciLayer = L.canvasIconLayer({}).addTo(map);
+  // ciLayer.addOnClickListener(function (e,data) {console.log(data)});
+  // ciLayer.addOnHoverListener(function (e,data) {console.log(data[0].data._leaflet_id)});
+
 
     var icon = L.icon({
-      iconUrl: 'img/pothole.png',
       iconSize: [20, 18],
       iconAnchor: [10, 9]
     });
 
   var markers = [];
-    for (var i = 0; i < 10000; i++) {
-      var marker = L.marker([58.5578 + Math.random()*1.8, 29.0087 + Math.random()*3.6], {icon: icon}).bindPopup("I Am "+i);
-    markers.push(marker);
+  for (let i = 0; i < 100; i++) {
+    let marker = L.marker([30.975406329380352 - Math.random() * 0.1, 120.77122517846198 + Math.random() * 0.1],{icon}).bindPopup("I Am " + i)
+    marker.render = function (context, marker, pointPos, devicePixelRatio) {
+      if (!marker.radius) {
+        marker.radius = 5
+        marker.d = 0
+      } else {
+        if (marker.d === 0) {
+          //+
+          if (marker.radius < 10) {
+            marker.radius += 0.1
+          } else {
+            marker.d = 1
+          }
+        } else {
+          //-
+          if (marker.radius > 1) {
+            marker.radius -= 0.1
+          } else {
+            marker.d = 0
+          }
+        }
+      }
+
+      if (marker.d === 0) {
+        context.beginPath();
+        context.arc(
+          pointPos.x * devicePixelRatio,
+          pointPos.y * devicePixelRatio,
+          marker.radius * 10 * devicePixelRatio,
+          0,
+          Math.PI * 2,
+          true);
+        // 描边路径
+
+        let p = (10 - marker.radius) / 10
+        context.fillStyle = `rgba(222,68,68,${p})`;
+        context.fill();
+        context.closePath()
+
+        context.beginPath();
+        context.arc(
+          pointPos.x * devicePixelRatio,
+          pointPos.y * devicePixelRatio,
+          marker.radius * 4 * devicePixelRatio,
+          0,
+          Math.PI * 2,
+          true);
+        // 描边路径
+
+        p = (10 - marker.radius) / 10
+        context.fillStyle = `rgba(222,68,68,${p})`;
+        context.fill();
+        context.closePath()
+      }
+
+      //绘制形状
+      context.beginPath();
+      context.lineWidth = 4;
+      context.strokeStyle = '#57ff6d';
+
+      // 绘制圆的路径**
+      context.arc(
+        pointPos.x * devicePixelRatio,
+        pointPos.y * devicePixelRatio,
+        marker.radius * devicePixelRatio,
+        0,
+        Math.PI * 2,
+        false);
+      context.stroke();
+      context.beginPath();
+      context.arc(
+        pointPos.x * devicePixelRatio,
+        pointPos.y * devicePixelRatio,
+        marker.radius * 2 * devicePixelRatio,
+        0,
+        Math.PI * 2,
+        true);
+
+      // 描边路径
+      context.stroke();
     }
+    markers.push(marker);
+  }
   ciLayer.addLayers(markers);
-  </script>
+</script>
 </body>
 </html>
