--- a/examples/index.html
+++ b/examples/index.html
@@ -41,34 +41,22 @@
 <script src="../dist/leaflet.canvas-markers.js"></script>
 <script>
 
-  let CRS = new L.Proj.CRS('EPSG:4490', '+proj=longlat +ellps=GRS80 +no_defs', {
-    resolutions: [
-      1.40625,
-      0.703125,
-      0.3515625,
-      0.17578125,
-      0.087890625,
-      0.0439453125,
-      0.02197265625,
-      0.010986328125,
-      0.0054931640625,
-      0.00274658203125,
-      0.001373291015625,
-      6.866455078125E-4,
-      3.4332275390625E-4,
-      1.71661376953125E-4,
-      8.58306884765625E-5,
-      4.291534423828125E-5,
-      2.1457672119140625E-5,
-      1.0728836059570312E-5,
-      5.364418029785156E-6,
-      2.682209064925356E-6,
-      1.3411045324626732E-6
-    ],
-    origin: [-179.99998, 90],
-    bounds: L.bounds([117.75370429660006, 26.99449191557761], [123.63262097540007, 32.2668788575695])
-  })
-  let map = L.map('map', {
+  const level = 19
+  const resolutions = []
+    for (let i = 0; i <= level; i++) {
+      resolutions[i] = Math.pow( 2,18 - i)
+  }
+
+  const CRS = new L.Proj.CRS(
+    'EPSG:900913',
+    '+proj=merc +a=6378206 +b=6356584.314245179 +lat_ts=0.0 +lon_0=0.0 +x_0=0 +y_0=0 +k=1.0 +units=m +nadgrids=@null +wktext  +no_defs',
+    {
+      resolutions,
+      origin: [0, 0],
+      bounds: L.bounds([20037508.342789244, 0], [0, 20037508.342789244])
+    }
+  )
+  const map = L.map('map', {
     attributionControl: false,
     center: [30.922474897744003, 120.79756468254071],
     zoom: 15,
@@ -77,8 +65,20 @@
     minZoom: 10,
     zoomControl: false
   })
-  L.tileLayer('http://ditu.zjzwfw.gov.cn/services/wmts/imgmap/default/oss?token=e956400d-a79e-47ed-9d80-d3ee04b5d356&service=WMTS&request=GetTile&version=1.0.0&layer=imgmap&style=default&format=image/jpgpng&TileMatrixSet=default028mm&TileMatrix={z}&TileRow={y}&TileCol={x}').addTo(map)
-  L.tileLayer('http://ditu.zjzwfw.gov.cn/services/wmts/imgmap_lab/default/oss/getTile/{z}/{y}/{x}?token=d1d8f823-9925-4f87-a551-4f8d0e1639dc').addTo(map)
+
+  const options = {
+    subdomain: '012',
+    tms:true,
+  }
+
+  L.tileLayer(
+    'https://api.map.baidu.com/customimage/tile?&x={x}&y={y}&z={z}&udt=20180913&scale=2&ak=E4805d16520de693a3fe707cdc962045',
+    options
+  ).addTo(map)
+  L.tileLayer(
+    'http://online4.map.bdimg.com/tile/?qt=vtile&x={x}&y={y}&z={z}&styles=sl&udt=20190712',
+    options
+  ).addTo(map)
 
 
   // map.on('click', (e) => {
@@ -98,7 +98,7 @@
   });
 
   let markers = [];
-  for (let i = 0; i < 100; i++) {
+  for (let i = 0; i < 10; i++) {
     let marker = L.marker([30.975406329380352 - Math.random() * 0.1, 120.77122517846198 + Math.random() * 0.1], {icon}).bindPopup("I Am " + i)
     if (i % 2 === 0) {
       marker.render = function (context, pointPos, devicePixelRatio) {
